--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "orm_benchmarking",
   "version": "1.0.0",
-  "description": "",
+  "description": "Complex ORM benchmarking",
   "main": "index.js",
   "author": "Krzysztof Hewelt",
   "dependencies": {
     "chart.js": "^4.4.2",
-    "chartjs-chart-error-bars": "^4.4.0",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "json-formatter-js": "^2.5.10",
     "mariadb": "^3.3.0",
     "sequelize": "^6.37.2"
